Fix footer position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ footer {
     display: flex;
     height: 50px;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     width: 100%;
 }
 
